--- a/payment/payment/build.gradle
+++ b/payment/payment/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.data:spring-data-envers'
     implementation 'io.confluent:kafka-avro-serializer:5.5.0'
-    runtimeOnly 'org.postgresql:postgresql'
+    runtime 'com.h2database:h2:1.3.176'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
